# court

./: .bandit  .gitignore  .pre-commit-config.yaml  README.md  README_TODO.md  alembic.ini  pyproject.toml  template.yaml
backend/: env.json  template.yaml
backend/lambdas/api_google_places_proxy/: api_google_places_proxy.py  requirements.txt
backend/lambdas/api_hello/: api_hello.py
backend/lambdas/api_location/: api_location.py
backend/lambdas/api_user/: api_user.py  requirements.txt
cloudformation/: iam_ssm_access_role.yaml
court/: app.py  database.py  env.json  env_configuration.py  main.py  matchmaking.py  template.yaml  testdata.py  user.py  views.py
court/lambdas/: api_location.py  api_user.py  user.py
court/lambdas/api_location/: api_location.py  requirements.txt
court/lambdas/api_user/: api_user.py
court/layers/: README.md
court/layers/base/: db.py  (+2 more)
court/utils/: aws_cognito.py  db.py  env_conf.py  location.py  session.py  user.py  validation.py
db/migrations/: 20230323235059_create_users_table.sql  20230323235059_schema_basics.sql  20230323235059_user_basics.sql  20231026004602_user_sessions.sql
design/: features.md
expo_app/: .eslintrc.json  App.tsx  app.json  babel.config.js  jest-setup.js  jest.config.js  jest.setup.js  package-lock.json  package.json
expo_app/__mocks__/: expo-font.js  expoConstants.js
expo_app/coverage/: clover.xml  coverage-final.json  lcov.info
expo_app/tests/: App.test.js
expo_app/utils/: colors.tsx  theme.tsx
local_layers/python/: aws_cognito.py  location.py  user.py
strategy/: app_features.md  competitors.md  traction.md
tests/: test_app.py  test_connection.py  test_flask.py  test_user_hello.py
(+96 files in other folders)
