[tool.poetry]
name = "court"
version = "0.1.0"
description = ""
authors = ["Ethan Miller <ethan.mill@utexas.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.11.0"
click = "^8.1.3"
pre-commit = "^3.1.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
