[tool.poetry]
name = "court"
version = "0.1.0"
description = ""
authors = ["Ethan Miller <ethan.mill147@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.11.0"
click = "^8.1.3"
pre-commit = "^3.1.1"
psycopg2-binary = "^2.9.5"
coverage = "^7.2.2"
boto3 = "^1.26.107"
aws-sam-cli = "^1.78.0"
faker = "^18.4.0"
geopy = "^2.3.0"
glicko2 = "^2.0.0"
connexion = "^3.0.2"
pydantic = "^2.5.2"
python-dateutil = "^2.8.2"
types-python-dateutil = "^2.8.19.14"
email-validator = "^2.1.0.post1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
types-python-dateutil = "^2.8.19.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
